@@ -11,6 +11,7 @@ import com.axonivy.market.core.enums.TypeOption;
 import com.axonivy.market.core.repository.CoreAbstractBaseRepository;
 import com.axonivy.market.core.repository.CoreCustomProductRepository;
 import com.axonivy.market.core.repository.CoreProductCustomSortRepository;
+import jakarta.persistence.NoResultException;
 import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
@@ -34,8 +35,10 @@ import org.springframework.data.domain.Sort;
 
 import java.sql.Timestamp;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Optional;
 
 import static com.axonivy.market.core.constants.CorePostgresDBConstants.*;
 
@@ -56,7 +59,7 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     if (results.isEmpty()) {
       return null;
     }
-    return results.get(0);
+    return results.getFirst();
   }
 
   @Override
@@ -65,7 +68,7 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     var pageRequest = (PageRequest) pageable;
 
     List<Product> resultList = getPagedProductsByCriteria(criteriaContext, searchCriteria, pageRequest);
-    detachExludedField(searchCriteria, resultList);
+    detachExcludedField(searchCriteria, resultList);
 
     long total = resultList.size();
     if (resultList.size() >= pageable.getPageSize()) {
@@ -73,6 +76,28 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     }
 
     return new PageImpl<>(resultList, pageable, total);
+  }
+
+  @Override
+  public Product findProductByIdAndRelatedData(String id) {
+    CriteriaQueryContext<Product> context = createCriteriaQueryContext();
+    context.root().fetch(PRODUCT_NAMES, JoinType.LEFT);
+    context.root().fetch(PRODUCT_SHORT_DESCRIPTION, JoinType.LEFT);
+    context.root().fetch(PRODUCT_ARTIFACT, JoinType.LEFT);
+    context.query().where(context.builder().equal(context.root().get(ID), id));
+    try {
+      return getEntityManager().createQuery(context.query()).getSingleResult();
+    } catch (NoResultException e) {
+      log.error("Cannot find product: ", e);
+      return null;
+    }
+  }
+
+  @Override
+  public List<String> getReleasedVersionsById(String id) {
+    return Optional.ofNullable(findProductByIdAndRelatedData(id))
+        .map(Product::getReleasedVersions)
+        .orElse(Collections.emptyList());
   }
 
   private long getTotalCount(CriteriaBuilder cb, ProductSearchCriteria searchCriteria) {
@@ -161,10 +186,11 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     criteriaContext.root().fetch(PRODUCT_MARKETPLACE_DATA);
     criteriaContext.root().fetch(PRODUCT_NAMES, JoinType.LEFT);
     MapJoin<Product, String, String> namesJoin = criteriaContext.root().joinMap(PRODUCT_NAMES, JoinType.LEFT);
+    namesJoin.on(criteriaContext.builder().equal(namesJoin.key(), language.getValue()));
 
     List<Order> orders = new ArrayList<>();
     if (pageRequest.getSort().isSorted()) {
-      orders = sortByOrders(criteriaContext, pageRequest, language.getValue(), namesJoin);
+      orders = sortByOrders(criteriaContext, pageRequest, namesJoin);
     }
 
     criteriaContext.query().select(criteriaContext.root()).where(predicate)
@@ -178,18 +204,17 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     return query.getResultList();
   }
 
-  private List<Order> sortByOrders(
-      CriteriaQueryContext<Product> criteriaContext,
-      PageRequest pageRequest, String language, MapJoin<Product, String, String> namesJoin) {
+  private List<Order> sortByOrders(CriteriaQueryContext<Product> criteriaContext,
+      PageRequest pageRequest, MapJoin<Product, String, String> namesJoin) {
     List<Order> orders = new ArrayList<>();
     if (pageRequest != null) {
       pageRequest.getSort().stream().findFirst().ifPresent((Sort.Order order) -> {
         var sortOption = SortOption.of(order.getProperty());
         switch (sortOption) {
-          case ALPHABETICALLY -> orders.add(sortByAlphabet(criteriaContext, language, namesJoin));
+          case ALPHABETICALLY -> orders.add(sortByAlphabet(criteriaContext, namesJoin));
           case RECENT -> orders.add(sortByRecent(criteriaContext));
           case POPULARITY -> orders.add(sortByPopularity(criteriaContext));
-          default -> orders.addAll(sortByStandard(criteriaContext, language, namesJoin));
+          default -> orders.addAll(sortByStandard(criteriaContext, namesJoin));
         }
       });
     }
@@ -199,8 +224,7 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     return orders;
   }
   private List<Order> sortByStandard(
-      CriteriaQueryContext<Product> criteriaContext, String language
-      , MapJoin<Product, String, String> namesJoin) {
+      CriteriaQueryContext<Product> criteriaContext, MapJoin<Product, String, String> namesJoin) {
     List<ProductCustomSort> customSorts = coreProductCustomSortRepository.findAll();
     List<Order> orders = new ArrayList<>();
     var order = criteriaContext.builder().desc(
@@ -208,9 +232,9 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
             Integer.MIN_VALUE));
     orders.add(order);
     if (ObjectUtils.isNotEmpty(customSorts)) {
-      var sortOptionExtension = SortOption.of(customSorts.get(0).getRuleForRemainder());
+      var sortOptionExtension = SortOption.of(customSorts.getFirst().getRuleForRemainder());
       switch (sortOptionExtension) {
-        case ALPHABETICALLY -> orders.add(sortByAlphabet(criteriaContext, language, namesJoin));
+        case ALPHABETICALLY -> orders.add(sortByAlphabet(criteriaContext, namesJoin));
         case RECENT -> orders.add(sortByRecent(criteriaContext));
         default -> orders.add(sortByPopularity(criteriaContext));
       }
@@ -224,13 +248,9 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
   }
 
   private static Order sortByAlphabet(
-      CriteriaQueryContext<Product> criteriaContext, String language
-      , MapJoin<Product, String, String> namesJoin) {
-    Expression<Object> nameValue = criteriaContext.builder().coalesce(
-        criteriaContext.builder().selectCase()
-            .when(criteriaContext.builder().equal(namesJoin.key(), language), namesJoin.value())
-            .otherwise(criteriaContext.builder().literal("")), criteriaContext.builder().literal("")
-    );
+      CriteriaQueryContext<Product> criteriaContext, MapJoin<Product, String, String> namesJoin) {
+    Expression<String> nameValue = criteriaContext.builder().coalesce(
+        namesJoin.value(), criteriaContext.builder().literal(""));
 
     // Return sorting order (ascending)
     return criteriaContext.builder().asc(nameValue);
@@ -251,8 +271,8 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     return Product.class;
   }
 
-  private void detachExludedField(ProductSearchCriteria searchCriteria, List<Product> resultList) {
-    if (isFieldExcluded(searchCriteria, DocumentField.SHORT_DESCRIPTIONS)) {
+  private void detachExcludedField(ProductSearchCriteria searchCriteria, List<Product> resultList) {
+    if (isFieldExcluded(searchCriteria)) {
       resultList.forEach(product -> {
         getEntityManager().detach(product);
         product.setShortDescriptions(null);
@@ -260,8 +280,8 @@ public class CoreCustomProductRepositoryImpl extends CoreAbstractBaseRepository<
     }
   }
 
-  private boolean isFieldExcluded(ProductSearchCriteria criteria, DocumentField field) {
+  private boolean isFieldExcluded(ProductSearchCriteria criteria) {
     return criteria.getExcludeFields() != null
-        && criteria.getExcludeFields().contains(field);
+        && criteria.getExcludeFields().contains(DocumentField.SHORT_DESCRIPTIONS);
   }
 }
